--- a/pages/main.css
+++ b/pages/main.css
@@ -29,17 +29,27 @@ body {
     height: 90px;
 }
 .headerSearch{
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius: 5px;
     padding-left: 10px;
     padding-right: 10px;
 }  
 .headerLogo{
-    width: 20px;
+    width: 25px;
 }
 .headerLine{
     height: 2px;
     width: 20px;
     background: #000;
     margin-top: 3px;
+}
+.figure {
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    top: 0;
+    left: 0;
+    background: #FFE4D2;
+    border-radius: 10% 10% 48% 51% / 0% 0% 55% 55%;
+    z-index: -1;
 }
