--- a/pages/main.css
+++ b/pages/main.css
@@ -54,11 +54,14 @@ body {
     z-index: -1;
 }
 
-
 .grid {
     display: grid;
     grid-gap: 10px;
     grid-auto-flow: column;
     overflow-x: auto;
     padding: 10px;
+}
+h1 {
+    margin-left: 10px;
+    text-transform: uppercase;
 }
